--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,3 @@
-h1 {
-  font-size: 42px;
-  font-family: "Roboto Serif", serif;
-  padding-right: 0;
-  margin-bottom: 0;
-  padding-left: 10px;
-}
 section .searchWidth {
   font-family: "Roboto Serif", serif;
   padding-right: 130px;
@@ -34,8 +27,16 @@ footer {
   display: block;
   text-align: center;
 }
+.mainPrediction {
+  font-size: 56px;
+  font-family: "Roboto Serif", serif;
+  padding-right: 0;
+  margin-bottom: 0;
+  margin-left: 10px;
+  padding-left: 10px;
+}
 .detailedDescription {
-  padding-top: 5px;
+  padding-top: 15px;
 }
 .container {
   border: 1px solid #000000;
@@ -65,8 +66,6 @@ footer {
 .temperature {
   font-size: 15px;
   font-family: "Roboto Serif", serif;
-  position: relative;
-  top: -15px;
 }
 .temperature > a {
   text-decoration: none;
@@ -88,10 +87,12 @@ footer {
   font-family: "Roboto Serif", serif;
 }
 .percents {
+  text-align: center;
   font-size: 14px;
   font-weight: 300;
   padding-right: 0;
   padding-left: 5px;
+  padding-top: 20px;
   margin-bottom: 0;
   font-family: "Roboto Serif", serif;
 }
@@ -112,16 +113,16 @@ footer {
   padding-left: 0;
   font-family: "Roboto Serif", serif;
 }
-.row > .col {
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-}
+
 .moreInfo {
+  color: #000000;
+  display: block;
+  text-align: center;
   padding-left: 15px;
   margin-top: 10px;
   font-family: "Roboto Serif", serif;
 }
+
 .emojise {
   font-size: 30px;
 }
@@ -133,4 +134,7 @@ footer {
   font-size: 12px;
   padding-bottom: 10px;
   font-family: "Roboto Serif", serif;
+}
+.prediction {
+  display: inline;
 }
