--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,11 @@ footer {
 section .searchWidth {
   padding-right: 250px;
 }
+li {
+  list-style: none;
+  position: relative;
+  top: -10px;
+}
 .mainPrediction {
   font-size: 56px;
   padding-right: 0;
@@ -35,7 +40,7 @@ section .searchWidth {
   padding-top: 15px;
 }
 .container {
-  border: 1px solid #6a6b6e;
+  border: 1px solid #6c757d;
   border-radius: 5px;
   margin: 50px auto 10px auto;
   padding: 15px;
@@ -129,7 +134,7 @@ section .searchWidth {
   display: inline;
 }
 .windDegree {
-  border: 1px solid #6a6b6e;
+  border: 1px solid #6c757d;
   border-radius: 4px;
   padding: 0 2px;
 }
