--- a/src/styles.css
+++ b/src/styles.css
@@ -48,11 +48,23 @@ li {
   padding: 15px;
   padding-left: 25px;
   width: 650px;
+}
+.morning {
   background: radial-gradient(
     592px at 48.2% 50%,
     rgba(255, 255, 249, 0.6) 0%,
     rgb(160, 199, 254) 74.6%
   );
+}
+.afternoon {
+  background-color: green;
+}
+.evening {
+  background-color: red;
+}
+.night {
+  background-color: black;
+  color: #fff;
 }
 .cities {
   padding-left: 15px;
