--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,6 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
-button {
-  font-size: 15px;
-  color: #fff;
-  background-color: #0d6efd;
-  border: 1px solid #0d6efd;
-  border-radius: 4px;
-  position: relative;
-  right: 1px;
-  padding: 5px;
-}
-button:hover {
-  background-color: #0a53be;
-  border-color: #0a53be;
-}
 footer {
   font-size: 12px;
   margin-top: 10px;
@@ -96,9 +82,19 @@ li {
   position: relative;
   top: -30px;
 }
-.temperature > a {
+.templink {
   text-decoration: none;
-  color: red;
+  color: #000000;
+}
+.colorChange {
+  color: #000000;
+}
+.templinkNight {
+  text-decoration: none;
+  color: #9795f0;
+}
+.colorChangeNight {
+  color: #9795f0;
 }
 .hourly-forecast {
   position: relative;
