--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,9 @@ li {
 a {
   text-decoration: none;
 }
+hr {
+  margin: 0;
+}
 .mainPrediction {
   font-size: 54px;
   padding-right: 0;
@@ -100,7 +103,7 @@ a {
   color: #9795f0;
 }
 .hourly-forecast {
-  position: relative;
+  text-align: center;
 }
 .fahrenheit {
   font-size: 15px;
@@ -142,8 +145,6 @@ a {
   color: #000000;
   display: block;
   text-align: center;
-  padding-left: 15px;
-  margin-top: 10px;
 }
 
 .emojise {
