--- a/src/styles.css
+++ b/src/styles.css
@@ -146,6 +146,9 @@ hr {
   color: #000000;
   display: block;
   text-align: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-weight: 500;
 }
 
 .emojise {
